# Inventory-market-service

./: pyproject.toml
envs/: debug.env
src/: database.py  dependencies.py  event_sourcing_main.py  main.py  settings.py
src/auth/: open_id_connect.py  open_id_connect_error.py  role_based_access.py  roles.py  user_model.py
src/conditions/: camera.py  empty.py  expiration_goods.py  haul.py  supply.py  trading_floor_deliveries.py  trading_goods_aggregation.py  vehicle.py  warehouse_goods_aggregation.py  zone.py
src/conditions/interfaces/: base_specification.py  i_specification.py
src/errors/: camera.py  haul.py  image.py  lincense_plate.py  message.py  vehicle.py  zone.py
src/joins/: camera.py  expiration_goods.py  haul.py  zone.py
src/message_routers/: __init__.py  goods.py  supply.py  trading_floor.py
src/models/: goods.py  goods_expirations.py  outbox.py  supplies.py  trading_floor_deliveries.py  trading_floor_goods.py  warehouse_goods.py
src/orders/: haul.py  sa_order.py
src/repositories/: sa_repositories.py  sa_repository.py
src/routes/: __init__.py  consumer.py  goods_expirations.py  supply.py  trading_floor.py
src/schemas/: goods_expitration.py  goods_expitration_filters.py  product_count.py  supply_states.py  trading_goods.py  trading_goods_filters.py
src/services/: __init__.py  trading_floor.py  warehouse.py
src/utils/: content_types.py  faststream_filters.py  unit_of_work.py
